Fix box shadows, remove border radius on top-level comments on mobile.

--- a/site/posts.css
+++ b/site/posts.css
@@ -17,7 +17,7 @@
   background: var(--ledit-background);
   margin: auto;
   border: 1px solid var(--ledit-border-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px var(--ledit-shadow-color);
 }
 
 .post-loading {
